--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="a"><h2>Shop Banana</h2></div>
     <h3>Shoes</h3>
     <img src="nk.png">
-    <p>Product: Banana Shoes</p>
+    <p>Product: Banana Shoes NIce</p>
     <p>Price: 25$</p>
     <a href="#">More info <ion-icon name="arrow-down-outline"></ion-icon></a>
     <br>
