--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
             height: 60px;
             margin-top: 15px;
         }
+        .item{
+            color: black;
+        }
     </style>
 </head>
-    <div class="a"><h2>Shop Banana</h2></div>
+    <div class="a"><h2>Zandeline</h2></div>
     <h3>Shoes</h3>
+    <div class="item">
     <img src="nk.png">
     <p>Product: Banana Shoes NIce</p>
     <p>Price: 25$</p>
     <a href="#">More info <ion-icon name="arrow-down-outline"></ion-icon></a>
     <br>
     <button>Add to cart</button>
+    </div>
 </head>
 </html>
